syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";

option csharp_namespace = "Database";

package database;

service DatabaseService {
  rpc AddCollection (AddCollectionRequest) returns (OperationStatusResponse);
  rpc DeleteCollection (DeleteCollectionRequest) returns (OperationStatusResponse);

  rpc UpsertElement (UpsertElementRequest) returns (OperationStatusResponse);
  rpc GetElement (GetElementRequest) returns (GetElementResponse);
  rpc DeleteElement (DeleteElementRequest) returns (OperationStatusResponse);

  rpc FlushCollection (FlushCollectionRequest) returns (OperationStatusResponse);
  rpc FlushDatabase (google.protobuf.Empty) returns (OperationStatusResponse);
}

message OperationStatusResponse {
  oneof results {
    SuccessResponse successResult = 1;
    ErrorResponse errorResult = 2;
  }
}

message SuccessResponse {
  int32 status = 1;
  string message = 2;
}

message ErrorResponse {
  int32 status = 1;
  string message = 2;
}

message AddCollectionRequest {
  string name = 1;
}

message DeleteCollectionRequest {
  string name = 1;
}

message UpsertElementRequest {
  string collectionName = 1;
  string key = 2;
  string value = 3;
  optional google.protobuf.Duration expiry = 4;
}

message GetElementRequest {
  string collectionName = 1;
  string key = 2;
}

message GetElementResponse {
  oneof results {
    ElementResponse element = 1;
    ErrorResponse error = 2;
  }
}

message ElementResponse {
  string value = 1;
}

message DeleteElementRequest {
  string collectionName = 1;
  string key = 2;
}

message FlushCollectionRequest {
  string name = 1;
}